# gantry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  justfile
.github/workflows/: ci.yml
crates/gantry/: Cargo.toml  build.rs
crates/gantry-cue/: Cargo.toml
crates/gantry-cue/src/: error.rs  main.rs
crates/gantry-cue/src/generator/: compose.rs  files.rs  gantry_yaml.rs  mod.rs  schema.rs  validate.rs
crates/gantry/src/: api.rs  cli.rs  config.rs  docker.rs  error.rs  events.rs  graph.rs  lib.rs  main.rs  model.rs  ops.rs  probe.rs  watcher.rs
crates/gantry/src/api/: routes.rs  state.rs  ws.rs
crates/gantry/src/ops/: converge.rs  reload.rs  replace.rs  reprobe.rs  restart.rs  start.rs  stop.rs
crates/gantry/src/probe/: log.rs  meta.rs  tcp.rs
crates/gantry/ui/: index.html
cue/: gantry.cue
cue/cue.mod/: module.cue
cue/schemas/: service.cue
docs/: work-project-guide.md
samples/: justfile
samples/cue.mod/: module.cue
samples/cue.mod/pkg/github.com/chaoyi/gantry/schemas/: qualify.cue  setup.cue
samples/services/postgres/: service.cue
samples/services/redis/: service.cue
samples/services/webapp/: Dockerfile  config.toml.tmpl  entrypoint.sh  service.cue
samples/setups/demo/: setup.cue
samples/setups/minimal/: setup.cue
samples/shared/: routes.conf.tmpl
tests/: conftest.py  fuzz_ops.py  test_log_since.py  test_recovery.py  test_timeout.py  ui_test.py
tests/fixtures/demo/: docker-compose.yml  gantry.yaml
tests/fixtures/demo/auth/: Dockerfile  entrypoint.sh
tests/fixtures/demo/crash-svc/: entrypoint.sh
tests/fixtures/demo/doomed/: entrypoint.sh
tests/fixtures/demo/fast-heal/: entrypoint.sh
tests/fixtures/demo/flaky-api/: entrypoint.sh
tests/fixtures/demo/flaky-svc/: entrypoint.sh
tests/fixtures/demo/slow-api/: entrypoint.sh
tests/fixtures/demo/slow-heal/: entrypoint.sh
tests/fixtures/demo/stuck-svc/: entrypoint.sh
tests/fixtures/demo/worker/: entrypoint.sh
tests/fixtures/timeout/: docker-compose.yml  gantry.yaml
tests/fixtures/timeout/slow-boot/: entrypoint.sh
