[workspace]
members = ["crates/gantry", "crates/gantry-cue"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
strip = true
