[package]
name = "gantry"
description = "Docker service orchestrator for AI-driven workflows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["docker", "orchestration", "testing", "ai"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
bollard = "0.18"
petgraph = "0.7"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap.workspace = true
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
